--- a/src/main/resources/static/all-fortunes.html
+++ b/src/main/resources/static/all-fortunes.html
@@ -3,15 +3,15 @@
     <head>
         <title>Fortune Teller - Mike</title>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet"/> -->
-        <link href="css/bootstrap-dark.min.css" rel="stylesheet"/>
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet"/>
+        <!-- <link href="css/bootstrap-dark.min.css" rel="stylesheet"/> -->
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
         <script src="js/app.js"></script>
     </head>
     <body onload="loadAll()">
       <div class="jumbotron container">
           <h1>Fortune Teller</h1>
-          <p>Find out what the future holds for you!</p>
+          <p>Find out what the future holds for you</p>
       </div>
       <div class="container">
         <p> <a href="index.html">Random Fortune</a> | <b>All Fortunes</b> </p>
