--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,15 +3,15 @@
     <head>
         <title>Fortune Teller</title>
         <script src="js/jquery.min.js"></script>
-        <!-- <link href="css/bootstrap.min.css" rel="stylesheet"/> -->
-       <link href="css/bootstrap-dark.min.css" rel="stylesheet"/>
+        <link href="css/bootstrap.min.css" rel="stylesheet"/>
+       <!-- <link href="css/bootstrap-dark.min.css" rel="stylesheet"/> -->
         <script src="js/bootstrap.min.js"></script>
         <script src="js/app.js"></script>
     </head>
     <body onload="loadOne()">
       <div class="jumbotron container">
           <h1>Fortune Teller</h1>
-          <p>Find out what the future holds for you!!</p>
+          <p>Find out what the future holds for you</p>
       </div>
       <div class="container">
           <p> <b>Random Fortune</b> | <a href="all-fortunes.html">All Fortunes</a> </p>
